fix: bag with overflow

--- a/source/styles/scss/components/_card.scss
+++ b/source/styles/scss/components/_card.scss
@@ -8,11 +8,13 @@
   gap: 2.5rem;
   margin: 0 auto;
   flex-wrap: wrap;
+  justify-content: center;
 
   @media (min-width: $tablet) {
     flex-direction: row;
     gap: 16px;
     max-width: 50rem;
+    justify-content: flex-start;
   }
 
   @media (min-width: $desktop) {
