--- a/source/styles/scss/components/_nav.scss
+++ b/source/styles/scss/components/_nav.scss
@@ -9,7 +9,7 @@
   align-items: center;
   background-color: $white;
   position: relative;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .nav__wrapper-one,
@@ -71,6 +71,7 @@
 
 .nav__icon-btn {
   display: none;
+  cursor: pointer;
 
   @media (min-width: $tablet) {
     display: flex;
@@ -80,10 +81,31 @@
     width: 2.5rem;
     height: 2.5rem;
     border: none;
+    color: $white;
+    align-items: center;
   }
 
   @media (min-width: $desktop) {
-    display: none;
+    justify-content: space-between;
+    width: 10rem;
+  }
+
+  &:hover {
+    background-color: $brown-secondary;
+  }
+}
+
+.nav__icon-btn span {
+  display: none;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  text-align: center;
+  font-family: $rubik;
+
+  @media (min-width: $desktop) {
+    padding-left: 2rem;
+    display: block;
   }
 }
 
