--- a/source/styles/scss/components/_product-card.scss
+++ b/source/styles/scss/components/_product-card.scss
@@ -21,7 +21,7 @@
 
   @media (min-width: $desktop) {
     width: 17rem;
-    height: 22.5rem;
+    height: 23rem;
   }
 
   &:hover {
@@ -36,7 +36,7 @@
     height: 11rem;
 
     @media (min-width: $tablet) {
-      height: 8rem;
+      height: 9rem;
     }
   }
 
